--- a/MvcMovie/Views/Movies/Delete.cshtml
+++ b/MvcMovie/Views/Movies/Delete.cshtml
@@ -35,6 +35,30 @@
         <dd>
             @Html.DisplayFor(model => model.Price)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.RunTime)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.RunTime)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Rating)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Rating)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Directors)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Directors)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.URL)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.URL)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
