--- a/MvcMovie/Views/Movies/Details.cshtml
+++ b/MvcMovie/Views/Movies/Details.cshtml
@@ -40,6 +40,24 @@
         <dd>
             @Html.DisplayFor(model => model.RunTime)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Rating)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Rating)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Directors)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Directors)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.URL)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.URL)
+        </dd>
     </dl>
 </div>
 <div>
